--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <!--Link cdn font size Poppins-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+
     <link rel="stylesheet" href="style.css">
     <title>website personal portfolio</title>
 
 </head>
 <body>
+
 
     <!--Navigation-->
     <header id="idheader">
@@ -43,9 +47,10 @@
     </header>
 
     <main>
-
         <!--Main content-->
         <section id="main-content" class="div-flex">
+
+            <div id="particles-js"></div>
 
             <div class="main-text" data-aos="zoom-in-down" data-aos-duration="3000">
 
@@ -346,5 +351,7 @@
     <script src="src/generationText2.js"></script>
     <script src="src/slider.js"></script>
     <script src="src/redirectWhatsapp.js"></script>
+    <script src="src/particles.js"></script>
+
 </body>
 </html>
